# serializer version: 1
# name: test_upgrade[False]
  list([
    dict({
      '_id': 'test_id',
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'name': 'test_name',
    }),
    dict({
      '_id': 'test_id_2',
      'created_at': datetime.datetime(2015, 10, 9, 20, 0),
      'name': 'test_name (2)',
    }),
    dict({
      '_id': 'test_id_3',
      'created_at': datetime.datetime(2015, 10, 8, 20, 0),
      'name': 'test_name (4)',
    }),
    dict({
      '_id': 'test_id_4',
      'created_at': datetime.datetime(2015, 10, 7, 20, 0),
      'name': 'test_name (3)',
    }),
  ])
# ---
# name: test_upgrade[True]
  list([
    dict({
      '_id': 'test_id',
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'name': 'test_name',
      'space_id': '0',
    }),
    dict({
      '_id': 'test_id_2',
      'created_at': datetime.datetime(2015, 10, 9, 20, 0),
      'name': 'test_name (2)',
      'space_id': '0',
    }),
    dict({
      '_id': 'test_id_3',
      'created_at': datetime.datetime(2015, 10, 8, 20, 0),
      'name': 'test_name (3)',
      'space_id': '0',
    }),
    dict({
      '_id': 'test_id_4',
      'created_at': datetime.datetime(2015, 10, 7, 20, 0),
      'name': 'test_name',
      'space_id': '1',
    }),
  ])
# ---
